kajit/tests/snapshots/corpus__generated_postreg_disasm_json_all_integers_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: disasm
---
> sub sp, sp, #0x1a0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xbb0
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x188]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xb6c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xb54
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x23
  mov x11, x23
  ldr x12, [sp, #0x188]
  b $+0xaf4
  mov x13, x23
  add x9, sp, #0x50
  mov x11, x9
  add x9, sp, #0x58
  mov x12, x9
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0x60]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  mov x25, x26
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x68]
  mov x9, #<imm>
  mov x13, x9
  mov x26, x13
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x78]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x80]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x88]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x90]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x98]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xa0]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0xa8]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xb0]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xb8]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0xc0]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xc8]
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0xd0]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0xd8]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xe0]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xe8]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0xf0]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xf8]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x100]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x108]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x110]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x118]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x120]
  mov x9, #<imm>
  mov x14, x9
  str x14, [sp, #0x128]
  mov x9, #<imm>
  mov x23, x9
  str x23, [sp, #0x130]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x138]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x140]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x148]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x150]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x158]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x160]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x168]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x170]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x178]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x180]
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x12
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x8c4
  ldr x11, [sp, #0x60]
  mov x13, x26
  cmp x11, x13
  cset x12, ne
  str x12, [sp, #0x70]
  ldr x9, [sp, #0x50]
  mov x24, x9
  ldr x9, [sp, #0x58]
  mov x26, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x878
  mov x11, x25
  ldr x13, [sp, #0x68]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x25, x0
  ldr x13, [sp, #0x80]
  ldr x23, [sp, #0x78]
  mov x0, x24
  mov x1, x26
  mov x2, x23
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  str x23, [sp, #0x80]
  ldr x23, [sp, #0x90]
  ldr x13, [sp, #0x98]
  mov x0, x24
  mov x1, x26
  mov x2, x23
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0xa8]
  ldr x13, [sp, #0xb0]
  str x23, [sp, #0x98]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0xc0]
  ldr x13, [sp, #0xc8]
  str x23, [sp, #0xb0]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0xd8]
  ldr x13, [sp, #0xe0]
  str x23, [sp, #0xc8]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0xf0]
  ldr x13, [sp, #0xf8]
  str x23, [sp, #0xe0]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0x108]
  ldr x13, [sp, #0x110]
  str x23, [sp, #0xf8]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x13, [sp, #0x120]
  ldr x14, [sp, #0x128]
  str x23, [sp, #0x110]
  mov x0, x24
  mov x1, x26
  mov x2, x13
  mov x3, x14
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0x138]
  ldr x13, [sp, #0x140]
  str x23, [sp, #0x128]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0x150]
  ldr x13, [sp, #0x158]
  str x23, [sp, #0x140]
  mov x0, x24
  mov x1, x26
  mov x2, x11
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x13, [sp, #0x170]
  ldr x14, [sp, #0x168]
  str x23, [sp, #0x158]
  mov x0, x24
  mov x1, x26
  mov x2, x14
  mov x3, x13
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  ldr x12, [sp, #0x70]
  mov x26, x24
  mov x23, x25
  and x23, x23, x12
  cbnz x23, $+0x1c
  ldr x23, [sp, #0x190]
  ldr x11, [sp, #0x60]
  mov x12, x11
  mov x12, x11
  ldr x11, [sp, #0x88]
  b $+0x4c
  ldr x23, [sp, #0x190]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x4c
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x5e8
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  mov x12, x11
  cmp x12, x11
  cset x11, ne
  ldr x24, [sp, #0x80]
  and x11, x11, x24
  cbnz x11, $+0x14
  mov x11, x12
  mov x11, x12
  ldr x12, [sp, #0xa0]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x48
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x580
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  cmp x11, x12
  cset x12, ne
  ldr x13, [sp, #0x98]
  and x12, x12, x13
  cbnz x12, $+0x14
  mov x24, x11
  mov x24, x11
  ldr x11, [sp, #0xb8]
  b $+0x40
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x40
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x51c
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  orr x23, x23, x25
  cmp x24, x11
  cset x11, ne
  ldr x25, [sp, #0xb0]
  and x11, x11, x25
  cbnz x11, $+0x14
  mov x12, x24
  ldr x11, [sp, #0xd0]
  mov x12, x24
  b $+0x48
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x20
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x4bc
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  mov x12, x11
  cmp x12, x11
  cset x11, ne
  ldr x13, [sp, #0xc8]
  and x11, x11, x13
  cbnz x11, $+0x14
  mov x11, x12
  mov x11, x12
  ldr x12, [sp, #0xe8]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x454
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  cmp x11, x12
  cset x24, ne
  ldr x25, [sp, #0xe0]
  and x24, x24, x25
  cbnz x24, $+0x14
  mov x12, x11
  mov x12, x11
  ldr x11, [sp, #0x100]
  b $+0x48
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x28
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x3f0
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  mov x12, x11
  cmp x12, x11
  cset x11, ne
  ldr x13, [sp, #0xf8]
  and x11, x11, x13
  cbnz x11, $+0x14
  mov x11, x12
  mov x11, x12
  ldr x12, [sp, #0x118]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x4d
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x388
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  cmp x11, x12
  cset x12, ne
  ldr x13, [sp, #0x110]
  and x12, x12, x13
  cbnz x12, $+0x14
  mov x24, x11
  mov x24, x11
  ldr x11, [sp, #0x130]
  b $+0x40
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x4a
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x324
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  orr x23, x23, x25
  cmp x24, x11
  cset x11, ne
  ldr x12, [sp, #0x128]
  and x11, x11, x12
  cbnz x11, $+0x14
  mov x11, x24
  mov x11, x24
  ldr x12, [sp, #0x148]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x44
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x2c4
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  cmp x11, x12
  cset x12, ne
  ldr x13, [sp, #0x140]
  and x12, x12, x13
  cbnz x12, $+0x14
  mov x12, x11
  mov x12, x11
  ldr x11, [sp, #0x160]
  b $+0x48
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x30
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x260
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  mov x12, x11
  cmp x12, x11
  cset x24, ne
  ldr x11, [sp, #0x158]
  and x24, x24, x11
  cbnz x24, $+0x14
  mov x11, x12
  mov x11, x12
  ldr x12, [sp, #0x178]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x10
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1f8
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  cmp x11, x12
  cset x12, ne
  mov x13, x26
  and x12, x12, x13
  cbnz x12, $+0x14
  mov x24, x23
  mov x12, x11
  mov x12, x11
  b $+0x48
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x38
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x194
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x24, x12
  mov x12, x11
  cbnz x12, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x14c
  mov x23, x24
  mov x23, x24
  b $+0x8
  mov x23, x24
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x114
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xfc
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xe4
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x12, [sp, #0x180]
  cmp x11, x12
  cset x14, ne
  cbnz x14, $+0x1c
  mov x9, #<imm>
  mov x24, x9
  mov x26, x24
  mov x11, x23
  mov x11, x23
  b $+0x68
  mov x9, #<imm>
  mov x24, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x12, x23
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x60
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x26, x11
  mov x11, x12
  mov x23, x11
  cbnz x26, $+0x60
  mov x11, x23
  and x11, x11, x12
  cmp x11, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x1a0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x1a0
  ret
