kajit/tests/snapshots/corpus__generated_postreg_disasm_json_bool_field_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: disasm
---
> sub sp, sp, #0x90
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x350
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x78]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x30c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2f4
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x23
  mov x11, x23
  ldr x12, [sp, #0x78]
  b $+0x294
  mov x13, x23
  add x9, sp, #0x50
  mov x11, x9
  add x9, sp, #0x58
  mov x12, x9
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x60]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x13, x9
  str x13, [sp, #0x68]
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x70]
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x12
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x250
  ldr x13, [sp, #0x60]
  cmp x13, x26
  cset x26, ne
  ldr x9, [sp, #0x50]
  mov x25, x9
  ldr x9, [sp, #0x58]
  mov x23, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x20c
  ldr x13, [sp, #0x68]
  mov x0, x25
  mov x1, x23
  mov x2, x13
  mov x3, x24
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  cbz x23, $+0xc
  cbz x26, $+0x8
  b $+0x1c
  ldr x24, [sp, #0x80]
  mov x23, x24
  ldr x13, [sp, #0x60]
  mov x11, x13
  mov x11, x13
  b $+0x48
  ldr x24, [sp, #0x80]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x194
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x24
  mov x23, x12
  cbnz x11, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x150
  mov x25, x23
  mov x25, x23
  b $+0x8
  mov x25, x23
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x118
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x100
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xe8
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x12, [sp, #0x70]
  cmp x11, x12
  cset x12, ne
  cbnz x12, $+0x1c
  mov x9, #<imm>
  mov x14, x9
  mov x23, x14
  mov x24, x25
  mov x24, x25
  b $+0x70
  mov x24, x25
  mov x9, #<imm>
  mov x23, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x1c
  mov x9, #<imm>
  mov x26, x9
  mov x11, x26
  mov x12, x24
  mov x12, x24
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x5c
  mov x9, #<imm>
  mov x11, x9
  mov x12, x24
  mov x23, x11
  mov x24, x12
  cbnz x23, $+0x60
  mov x11, x24
  and x11, x11, x12
  cmp x11, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x90
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x90
  ret
